# apache-nimble-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  cbindgen.toml  wrapper.h
apache-nimble/: Cargo.toml  build.rs  cbindgen.toml
apache-nimble-sys/: Cargo.toml  build.rs
apache-nimble-sys/include/console/: console.h
apache-nimble-sys/include/nimble/: nimble_npl_os.h
apache-nimble-sys/include/os/: os.h
apache-nimble-sys/include/syscfg/: syscfg.h
apache-nimble-sys/src/: lib.rs
apache-nimble-sys/src/drivers/: nrf5x.rs
apache-nimble-sys/src/port-layers/: embassy.rs
apache-nimble/nrfx_include/: nrfx_glue.h
apache-nimble/src/: controller.rs  host.rs  lib.rs
example/: port_layer.rs
src/: lib.rs
