cargo-features = ["resolver"]

[package]
name = "apache-nimble-sys"
version = "0.1.0"
authors = ["Ben Brittain <ben@brittain.org>"]
edition = "2018"
resolver = "2"

[dependencies]
cty = "0.2.1"

[dependencies.cstr_core]
version = "0.2.2"
default-features = false
features = []

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"
