[package]
name = "apache-nimble"
version = "0.1.0"
edition = "2021"
description = "High-level bindings for Apache nimBLE Project"
license = "Apache-2.0"

[dependencies]
cty = "0.2.1"
embedded-io = "0.6.0"
embassy-sync = "0.6.0"
embassy-time = "0.4.0"
embassy-futures = "0.1.0"
apache-nimble-sys = { path = "../apache-nimble-sys" }
bt-hci = "0.2.0"
defmt = "0.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.69.0"
cbindgen = "0.26.0"

[features]
critical-section = ["apache-nimble-sys/critical-section"]

# drivers
nrf52840 = ["apache-nimble-sys/nrf52840"]

# port layers
port-layer-embassy = ["apache-nimble-sys/port-layer-embassy"]

# components
host = ["apache-nimble-sys/host"]
controller = ["apache-nimble-sys/controller"]
